# gepadantic

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
data/: dummy_medical_records.json
docs/: about-gepa.md  index.md
docs/api/: index.md
docs/core-components/: adapter.md  data-utils.md  index.md  runner.md  scaffold.md  signature-agent.md
docs/core-concepts/: index.md  runner.md
docs/user-guides/: dspy_tutorial.ipynb  getting-started.md  medical_chronology.ipynb
examples/: dspy_example.py  math_tools.py  penguins.py  titanic_prediction.py  utils.py
notebooks/: dspy_tutorial.ipynb  medical_chronology.ipynb  medical_chronology_strings.ipynb
optimization_results/: optimization_20251121_195407.json  optimization_20251122_140455.json  optimization_20251129_205407.json  optimization_20251129_232841.json  optimization_20251130_163226.json  optimization_20251130_180915.json  optimization_20251202_195615.json  optimization_20251204_190506.json  optimization_20251204_193347.json  optimization_20251213_163204.json  optimization_20251219_204807.json  optimization_20260204_161337.json  optimization_20260204_163901.json  optimization_20260204_183324.json
src/gepadantic/: __init__.py  adapter.py  cache.py  callbacks.py  components.py  data_utils.py  instructions.py  lm.py  loggers.py  reflection.py  runner.py  scaffold.py  schema.py  signature.py  signature_agent.py  tool_components.py  types.py
tests/: test_adapter.py  test_cache.py  test_callbacks.py  test_logging.py  test_monty_interpreter.py  test_nested_signature.py  test_optimize_agent_prompts.py  test_reflection.py  test_signature.py  test_signature_agent.py  test_signature_user_content.py  test_signatures.py  test_tool_components.py
(+5 files in other folders)
